[package]
name = "workex"
version = "0.0.4"
edition = "2021"
description = "In-house messaging bindgen library for workers/windows"
repository = "https://github.com/Pistonite/workex"
license = "MIT"
authors = ["Pistonight <pistonknight@outlook.com>"]
exclude = [
    "lib/**/*",
    "examples/**/*",
    "Taskfile.yml",
    "test/**/*",
]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
codize = "0.3.3"
dunce = "1.0.5"
error-stack = "0.4.1"
pathdiff = "0.2.3"
swc_common = { version = "0.40.2", features = ["tty-emitter"] }
swc_core = { version = "0.106.4", features = ["ecma_ast"] }
swc_ecma_parser = "0.152.2"
thiserror = "2.0.9"
